tests/NormalTests/paczka2/big_fuzzy/57701383.err
Error in line 1: etR S700 79,0
Error in line 10: S8nWfGS7Xx S700 21,1
Error in line 18: sPybHwoA A691 37,53
Error in line 16: g2SGQy S6 45,8
Error in line 21: sPybHwoA A691 30,6
Error in line 38: CQdDf1N4G Sr 21,4
Error in line 28: sPybHwoA S700 94,5
Error in line 55: S700 S700 9,2
Error in line 47: CQdDf1N4G A691 97,5
Error in line 57: sPybHwoA A691 38,5
Error in line 62: sPybHwoA S700 13,9
Error in line 42: S8nWfGS7Xx A756 244,8
Error in line 81: WXu S6 -2,2
Error in line 73: S8nWfGS7Xx S700 54,0
Error in line 76: g2SGQy S700 5,1
Error in line 77: S700 S700 0,2
Error in line 94: g2SGQy A691 89,8
Error in line 100: etR S6 18,4
Error in line 109: S700 A691 27,93
Error in line 106: etR S700 92,1
Error in line 110: etR A691 12,2
Error in line 84: sPybHwoA A691 179,6
Error in line 78: WXu S6 45,6
Error in line 119: S700 A691 92,8
Error in line 129: sPybHwoA A756 1,7
Error in line 121: CQdDf1N4G A756 94,3
Error in line 130: g2SGQy S700 34,9
Error in line 146: CQdDf1N4G S700 57,8
Error in line 161: WXu S6 19,2
Error in line 159: CQdDf1N4G A691 47,5
Error in line 175: etR S700 7,2
Error in line 182: S700 A756 26,6
Error in line 184: CQdDf1N4G A756 16,2
Error in line 189: sPybHwoA S700 96,3
Error in line 193: S700 S6 68,0
Error in line 195: sPybHwoA A691 47,5
Error in line 204: g2SGQy A691 2,0
Error in line 206: etR S6 60,5
Error in line 208: sPybHwoA A691 39,2
Error in line 218: sPybHwoA S6 145,19
Error in line 219: S700 A691 89,0
Error in line 217: etR A691 11,1
Error in line 216: sPybHwoA S6 70,5
Error in line 228: CQdDf1N4G S700 84,1
Error in line 229: CQdDf1N4G A756 65,7
Error in line 224: etR S6 26,1
Error in line 231: etR A756 52,9
Error in line 230: CQdDf1N4G S700 71,5
Error in line 234: S8nWfGS7Xx A691 3,1
Error in line 232: etR S700 15,8
Error in line 236: S8nWfGS7Xx A756 24,0
Error in line 241: S8nWfGS7Xx S700 63,53
Error in line 244: S8ØWfGS7Xx S6 33,8
